--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -3,10 +3,7 @@
   }}">
   <div class="bg-white w-full md:max-w-sm shadow-2xl">
     <div class="flex justify-end p-5">
-      <svg (click)="this.closeSideBar()" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-        stroke-width="1.5" stroke="currentColor" class="w-8 h-8">
-        <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 19.5l15-15m-15 0l15 15" />
-      </svg>
+      <img [src]="iconClosed" alt="close" (click)="this.closeSideBar()" class="w-8 h-8">
     </div>
     <div>
       <div class="mt-3">
@@ -22,7 +19,7 @@
         <app-menu [items]="menuitems"></app-menu>
       </div>
       <div class="mt-6">
-        <app-social-icons></app-social-icons>
+        <app-social-icon></app-social-icon>
       </div>
     </div>
   </div>
@@ -33,7 +30,7 @@
     <div class="container text-white py-2">
       <ul class="flex justify-around  gap-4">
         <li>
-          <img src="../assets/shapes/shape-1.webp" alt="" />
+          <!-- <img src="../assets/shapes/shape-1.webp" alt="" /> -->
         </li>
         <li class="">
           <app-phone></app-phone>
@@ -42,10 +39,9 @@
           <app-email></app-email>
         </li>
         <li>
-          <img src="../assets/shapes/shape-2.webp" alt="" />
         </li>
         <li>
-          <app-social-icons></app-social-icons>
+          <app-social-icon></app-social-icon>
         </li>
       </ul>
     </div>
@@ -58,18 +54,14 @@
         <img src="../assets/images/indobata-logo.png" alt="Logo" height="70" width="70" />
       </a>
       <div class="lg:hidden">
-        <svg (click)="this.openSideBar()" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-          stroke-width="1.5" stroke="currentColor" class="w-8 h-8">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
-        </svg>
+        <img [src]="iconOpen" alt="hamburger" (click)="this.openSideBar()"  class="w-8 h-8">
       </div>
       <app-menu class="hidden lg:block" [items]="menuitems"></app-menu>
-      <app-social-icons class="hidden lg:block"></app-social-icons>
+      <app-social-icon class="hidden lg:block lg:invisible"></app-social-icon>
     </div>
   </div>
 </header>
 
-<button *ngIf="isMenuScrolled" (click)="scrollToTop()"
-  class="flex text-white transition-all duration-300 fixed bottom-5 right-5 w-10 h-10 bg-emerald-600 hover:bg-slate-800 rounded-full">
-  <img src="../../../../assets/icons/arrow-up.svg" alt="" class="w-6 h-6 m-auto">
+<button *ngIf="isMenuScrolled" (click)="scrollToTop()" class="scrolling">
+  <img [src]="iconArrowUp" alt="" class="w-6 h-6 m-auto arrow">
 </button>
