Work in progress...

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -4,4 +4,4 @@
 <app-our-product [products]="products"></app-our-product>
 <app-available-marketplace [logo]="logo"></app-available-marketplace>
 <app-testimonials [testimonials]="testimonials"></app-testimonials>
-<app-contact></app-contact>
+<app-contact-section></app-contact-section>
