--- a/src/app/shared/components/card-product/card-product.component.html
+++ b/src/app/shared/components/card-product/card-product.component.html
@@ -1,28 +1,21 @@
-<div
-  class="relative overflow-hidden transition duration-200 transform rounded shadow-lg hover:-translate-y-2 hover:shadow-2xl">
+<div class="wrapper">
   <div>
-    <div class="absolute bottom-0 left-0 p-6 bg-black bg-opacity-25 w-full inset-x-0 px-6 py-4">
-      <h2 class="text-xl font-semibold 5 text-white capitalize">
+    <div class="card-content">
+      <h2 class="title">
         {{ product.name }}
       </h2>
-      <p class="text-base leading-4 text-white mt-2">
+      <p class="description">
         {{ product.description }}
       </p>
       <a>
-        <span
-          class="focus:outline-none focus:underline flex items-center mt-4 cursor-pointer text-white hover:text-gray-200 hover:underline">
-          <p class="pr-2 text-sm font-medium leading-none cursor-pointer">
+        <span class="read-more">
+          <p>
             Read More
           </p>
-          <svg class="fill-stroke" width="16" height="16" viewBox="0 0 16 16" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <path d="M5.75 12.5L10.25 8L5.75 3.5" stroke="currentColor" strokeWidth="2" strokeLinecap="round"
-              strokeLinejoin="round" />
-          </svg>
+          <img [src]="iconArrowLeft" alt="iconArrowLeft" class="arrow">
         </span>
       </a>
     </div>
   </div>
-  <img class="object-cover w-full lg:w-[300px] h-56 md:h-64 xl:h-80 bg-gray-300"
-    [src]='product.images' />
+  <img class="card-images" [src]='product.images' />
 </div>
