--- a/src/app/shared/components/card-product-hover/card-product-hover.component.html
+++ b/src/app/shared/components/card-product-hover/card-product-hover.component.html
@@ -1,15 +1,15 @@
-<div class="w-72 h-fit group border-4 border-gray-600">
+<div class="w-72 h-fit group border-4 border-gray-200">
   <div class="relative overflow-hidden">
-    <img class="h-96 w-full object-cover" src="../../../assets/images/images-paving.jpg" alt="">
+    <img class="h-96 w-full object-cover" [src]="product.images" alt="">
     <div class="absolute h-full w-full bg-black/20 flex items-center justify-center -bottom-10 group-hover:bottom-0 opacity-0 group-hover:opacity-100 transition-all duration-300">
       <div class="card-content">
         <h2 class="title">
-          genteng beton
+          {{ product.name }}
         </h2>
         <p class="description">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta voluptates eum temporibus vel dolores. At vitae cumque quasi accusantium repudiandae distinctio ut deserunt velit reprehenderit iste laudantium, voluptate libero suscipit.
+          {{ product.description }}
         </p>
-        <a>
+        <a [routerLink]="['/product-detail', product.id]">
           <span class="read-more">
             <p>
               Read More
