Work in progress...

--- a/src/app/modules/home/components/about-section/about-section.component.html
+++ b/src/app/modules/home/components/about-section/about-section.component.html
@@ -1,20 +1,13 @@
 <section class="bg-white dark:bg-gray-900">
-    <div class="gap-16 items-center py-8 px-4 mx-auto max-w-screen-xl lg:grid lg:grid-cols-2 lg:py-16 lg:px-6">
-        <div class="font-light text-gray-500 sm:text-lg dark:text-gray-400">
-            <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">{{hero.title}}</h2>
-            <p class="mb-4">{{hero.description}}</p>
-            <a href="#"
-                class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-gray-900 rounded-lg border border-gray-300 hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800">
-                <span>Read more</span>
-                <img src="../../../../../assets/icons/arrow-right.svg" alt="" class="-ml-1 w-5 h-5">
-            </a>
-        </div>
-        <div class="grid grid-cols-2 gap-4 mt-8">
-            <img class="w-full rounded-lg" [lazyLoad]="hero.images[0]" alt="office content 1">
-            <img class="mt-4 w-full lg:mt-10 rounded-lg" [lazyLoad]="hero.images[1]"
-                alt="office content 2">
-        </div>
-
+  <div class="gap-16 items-center py-8 px-4 mx-auto max-w-screen-xl lg:grid lg:grid-cols-2 lg:py-16 lg:px-6">
+    <div class="font-light text-gray-500 sm:text-lg dark:text-gray-400">
+      <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900">{{hero.title}}</h2>
+      <p class="mb-4">{{hero.description}}</p>
+      <app-more-button [label]="'Read'" [url]="'/about'"></app-more-button>
     </div>
-
+    <div class="grid grid-cols-2 gap-4 mt-8">
+      <img class="w-full rounded-lg" [lazyLoad]="hero.images[0]" alt="office content 1">
+      <img class="mt-4 w-full lg:mt-10 rounded-lg" [lazyLoad]="hero.images[1]" alt="office content 2">
+    </div>
+  </div>
 </section>
