--- a/src/app/shared/components/card-product/card-product.component.scss
+++ b/src/app/shared/components/card-product/card-product.component.scss
@@ -13,7 +13,7 @@
         }
 
         .description {
-            @apply text-base leading-4 text-white mt-2;
+            @apply text-base leading-4 text-white mt-2 text-left;
         }
 
         .read-more {
