--- a/src/app/shared/components/form-field/form-field.component.html
+++ b/src/app/shared/components/form-field/form-field.component.html
@@ -10,6 +10,7 @@
     <span *ngIf="control.hasError('required')">Field is required</span>
     <span *ngIf="control.hasError('minlength')">Minimum length is {{ control.getError('minlength').requiredLength }}</span>
     <span *ngIf="control.hasError('maxlength')">Maximum length is {{ control.getError('maxlength').requiredLength }}</span>
+    <span *ngIf="control.hasError('email')">Email is required</span>
     <!-- Add more validation messages for other validators if needed -->
   </div>
 </div>
