--- a/src/app/shared/components/card-project/card-project.component.html
+++ b/src/app/shared/components/card-project/card-project.component.html
@@ -1,5 +1,5 @@
 <div class="bg-white rounded-lg shadow-md overflow-hidden">
-  <img class="h-48 w-full object-cover" src="project1.jpg" alt={{project.title}}>
+  <img class="h-48 w-full object-cover" [lazyLoad]="'project1.jpg'" alt={{project.title}}>
   <div class="p-4">
     <h3 class="text-lg font-bold text-gray-900">{{ project.title }}</h3>
     <p class="text-gray-500">{{ project.description }}</p>
