--- a/src/app/modules/about/about.component.html
+++ b/src/app/modules/about/about.component.html
@@ -9,9 +9,9 @@
   </div>
 
   <div class="lg:mt-14 sm:mt-10 mt-12">
-      <img class="lg:block hidden w-full" src="https://i.ibb.co/GvwJnvn/Group-736.png" alt="Group of people Chilling" />
-      <img class="lg:hidden sm:block hidden w-full" src="https://i.ibb.co/5sZTmHq/Rectangle-116.png" alt="Group of people Chilling" />
-      <img class="sm:hidden block w-full" src="https://i.ibb.co/zSxXJGQ/Rectangle-122.png" alt="Group of people Chilling" />
+      <img class="lg:block hidden w-full" [lazyLoad]="'https://i.ibb.co/GvwJnvn/Group-736.png'" alt="Group of people Chilling" />
+      <img class="lg:hidden sm:block hidden w-full" [lazyLoad]="'https://i.ibb.co/5sZTmHq/Rectangle-116.png'" alt="Group of people Chilling" />
+      <img class="sm:hidden block w-full" [lazyLoad]="'https://i.ibb.co/zSxXJGQ/Rectangle-122.png'" alt="Group of people Chilling" />
   </div>
 
   <div class="lg:mt-16 sm:mt-12 mt-16 flex lg:flex-row justify-between flex-col lg:gap-8 gap-12">
@@ -24,9 +24,9 @@
           </p>
       </div>
       <div class="lg:flex items-center w-full lg:w-1/2">
-          <img class="lg:block hidden w-full" src="https://i.ibb.co/2kxWpNm/Group-740.png" alt="people discussing on board" />
-          <img class="lg:hidden sm:block hidden w-full h-3/4" src="https://i.ibb.co/ZLgK3NQ/Group-788.png" alt="people discussing on board" />
-          <img class="sm:hidden block w-full" src="https://i.ibb.co/9g2R7Xr/Group-803.png" alt="people discussing on board" />
+          <img class="lg:block hidden w-full" [lazyLoad]="'https://i.ibb.co/2kxWpNm/Group-740.png'" alt="people discussing on board" />
+          <img class="lg:hidden sm:block hidden w-full h-3/4" [lazyLoad]="'https://i.ibb.co/ZLgK3NQ/Group-788.png'" alt="people discussing on board" />
+          <img class="sm:hidden block w-full" [lazyLoad]="'https://i.ibb.co/9g2R7Xr/Group-803.png'" alt="people discussing on board" />
       </div>
   </div>
 </div>
