--- a/src/app/shared/components/card-product-hover/card-product-hover.component.html
+++ b/src/app/shared/components/card-product-hover/card-product-hover.component.html
@@ -1,6 +1,6 @@
 <div class="w-72 h-fit group border-4 border-gray-200">
   <div class="relative overflow-hidden">
-    <img class="h-96 w-full object-cover" [src]="product.images" alt="">
+    <img class="h-96 w-full object-cover" [lazyLoad]="product.images[0]" alt="">
     <div class="absolute h-full w-full bg-black/20 flex items-center justify-center -bottom-10 group-hover:bottom-0 opacity-0 group-hover:opacity-100 transition-all duration-300">
       <div class="card-content">
         <h2 class="title">
@@ -14,7 +14,7 @@
             <p>
               Read More
             </p>
-            <img [src]="iconArrowLeft" alt="iconArrowLeft" class="arrow">
+            <img [lazyLoad]="iconArrowLeft" alt="iconArrowLeft" class="arrow">
           </span>
         </a>
       </div>
