--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -3,9 +3,7 @@
   </div>
   <div class="bg-gray-100">
     <div class="container px-5 py-6 mx-auto flex items-center sm:flex-row flex-col">
-      <a routerLink="/">
-        <img src="../assets/images/indobata-logo.png" alt="Logo" height="70" width="70" />
-      </a>
+      <app-brand-logo></app-brand-logo>
       <p class="text-sm text-gray-500 sm:ml-6 sm:mt-0 mt-4">© 2023 Indobata — All rights reserved
       </p>
       <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
