--- a/src/app/shared/components/card-blog/card-blog.component.html
+++ b/src/app/shared/components/card-blog/card-blog.component.html
@@ -16,7 +16,7 @@
       Salad Recipe ever
         </a>
         <p class="text-gray-500 text-sm">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            {{ word | shortenerText: 20 }}
         </p>
     </div>
     <div class="px-6 py-3 flex flex-row items-center justify-between bg-gray-100">
