--- a/src/app/modules/authentication/login/login.component.html
+++ b/src/app/modules/authentication/login/login.component.html
@@ -7,10 +7,7 @@
             <app-brand-logo [height]="100" [width]="100"></app-brand-logo>
           </div>
           <p class="text-[#213a5c] text-base font-semibold text-center">
-            Finding your passion is down to trying new things,
-            seeing what you like, and doing more of it until that's
-            all that you would do for a living. So, let we share our
-            passion here.
+            Welcome to Indobata, Please log in to access exclusive features and information.
           </p>
         </div>
 
@@ -23,13 +20,9 @@
           </app-submit-button>
         </form>
         <p class="mt-6 text-sm text-center text-gray-400">
-          Don&#x27;t have an account yet?
-          <span class="sign-up-word">
-            <a routerLink="/register" class="underline text-[#213a5c] font-semibold">
-              Sign up
-            </a>
-          </span>
-          .
+          If you are new here, please <a routerLink="/register" class="underline text-[#213a5c] font-semibold">
+            create an account
+          </a> to enjoy our services.
         </p>
       </div>
     </div>
