feat: Create tooltip

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="text-gray-600 body-font">
-  <div class="container px-5 py-24 mx-auto">
+  <div class="container px-5 mx-auto">
   </div>
   <div class="bg-gray-100">
     <div class="container px-5 py-6 mx-auto flex items-center sm:flex-row flex-col">
