--- a/src/app/modules/authentication/login/login.component.html
+++ b/src/app/modules/authentication/login/login.component.html
@@ -16,6 +16,8 @@
           <app-form-field label="Email" [control]="getFormControl('email')" controlName="email"></app-form-field>
           <app-form-field label="Password" [control]="getFormControl('password')" controlName="password">
           </app-form-field>
+          <app-form-field label="Confirm Password" [control]="getFormControl('confirmPassword')" controlName="confirmPassword">
+          </app-form-field>
           <app-submit-button [isLoading]="isSubmitting" (click)="save()" [label]="'Login'" [isDisabled]="form.invalid">
           </app-submit-button>
         </form>
