--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -60,6 +60,6 @@
   </div>
 </header>
 
-<button *ngIf="isMenuScrolled" (click)="scrollToTop()" class="scrolling">
+<button *ngIf="isMenuScrolled" (click)="scrollToTop()" class="scrolling z-50">
   <img [src]="iconArrowUp" alt="" class="w-6 h-6 m-auto arrow">
 </button>
