--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,5 +1,5 @@
 <app-hero [heros]="heros"></app-hero>
-<app-about-section [heros]="heros"></app-about-section>
+<app-about-section [overview]="overview"></app-about-section>
 <app-features [features]="features"></app-features>
 <app-our-product [products]="products"></app-our-product>
 <app-available-marketplace [logo]="logo"></app-available-marketplace>
