--- a/src/app/modules/about/about.component.html
+++ b/src/app/modules/about/about.component.html
@@ -1,44 +1,43 @@
 <div class="2xl:container 2xl:mx-auto lg:py-16 lg:px-20 md:py-12 md:px-6 py-9 px-4" *ngIf="overview">
   <div class="lg:w-10/12 w-full">
     <p class="text-sm leading-3 font-bold text-gray-700 dark:text-gray-500 hover:text-gray-800 cursor-pointer">About</p>
-    <h2> {{title}} </h2>
+    <h2>{{ title }}</h2>
     <p class="font-normal text-base leading-6 text-gray-600 dark:text-white mt-6">
-      {{overview.content.paragraph1}}
+      {{ overview.content.paragraph1 }}
     </p>
   </div>
 
   <div class="lg:mt-16 sm:mt-12 mt-16 flex lg:flex-row justify-between flex-col lg:gap-8 gap-12">
     <div class="lg:flex items-center w-full lg:w-1/2">
-      <img class="lg:block hidden w-full rounded-lg" [lazyLoad]="overview.images[2]" alt="people discussing on board" />
-      <img class="lg:hidden sm:block hidden w-full h-3/4 rounded-lg" [lazyLoad]="overview.images[2]"
-        alt="people discussing on board" />
-      <img class="sm:hidden block w-full rounded-lg" [lazyLoad]="overview.images[2]" alt="people discussing on board" />
+      <ng-container *ngFor="let image of overview.images; let i = index">
+        <img class="lg:block hidden w-full rounded-lg" [lazyLoad]="image" alt="people discussing on board" *ngIf="i === 2" />
+        <img class="lg:hidden sm:block hidden w-full h-3/4 rounded-lg" [lazyLoad]="image" alt="people discussing on board" *ngIf="i === 2" />
+        <img class="sm:hidden block w-full rounded-lg" [lazyLoad]="image" alt="people discussing on board" *ngIf="i === 2" />
+      </ng-container>
     </div>
     <div class="w-full xl:w-5/12 lg:w-6/12">
       <p class="font-normal text-base leading-6 text-gray-600 dark:text-white mt-4">
-        {{overview.content.paragraph2}}
+        {{ overview.content.paragraph2 }}
       </p>
       <p class="font-normal text-base leading-6 text-gray-600 dark:text-white mt-6">
-        {{overview.content.paragraph3}}
+        {{ overview.content.paragraph3 }}
       </p>
     </div>
-
   </div>
 
   <div class="lg:mt-16 sm:mt-12 mt-16 flex lg:flex-row justify-between flex-col lg:gap-8 gap-12">
     <div class="w-full xl:w-5/12 lg:w-6/12">
       <p class="font-normal text-base leading-6 text-gray-600 dark:text-white mt-4">
-        {{overview.content.paragraph4}}
+        {{ overview.content.paragraph4 }}
       </p>
       <p class="font-normal text-base leading-6 text-gray-600 dark:text-white mt-6">
-        {{overview.content.paragraph5}}
+        {{ overview.content.paragraph5 }}
       </p>
     </div>
     <div class="lg:flex items-center w-full lg:w-1/2">
-      <img class="lg:block hidden w-full rounded-lg" [lazyLoad]="overview.images[3]" alt="people discussing on board" />
-      <img class="lg:hidden sm:block hidden w-full h-3/4 rounded-lg" [lazyLoad]="overview.images[3]"
-        alt="people discussing on board" />
-      <img class="sm:hidden block w-full rounded-lg" [lazyLoad]="overview.images[3]" alt="people discussing on board" />
+      <ng-container *ngFor="let image of overview.images; let i = index">
+        <img class="lg:block hidden w-full rounded-lg" [lazyLoad]="image" alt="people discussing on board" *ngIf="i === 3" />
+        <img class="lg:hidden sm:block hidden w-full h-3/4 rounded-lg" [lazyLoad]="image" alt="people discussing on board" *ngIf="i === 3" />
+        <img class="sm:hidden block w-full rounded-lg" [lazyLoad]="image" alt="people discussing on board" *ngIf="i === 3" />
+      </ng-container>
     </div>
-  </div>
-</div>
