--- a/src/app/modules/product/components/sidebar-filter/sidebar-filter.component.scss
+++ b/src/app/modules/product/components/sidebar-filter/sidebar-filter.component.scss
@@ -1,3 +1,4 @@
 .icon-gray {
-  filter: invert(48%) sepia(6%) saturate(856%) hue-rotate(182deg) brightness(91%) contrast(93%);
+	filter: invert(48%) sepia(6%) saturate(856%) hue-rotate(182deg)
+		brightness(91%) contrast(93%);
 }
