feat: add loading interceptor & add pagination in get product by category id

--- a/src/app/modules/product/pages/product-list/product.component.html
+++ b/src/app/modules/product/pages/product-list/product.component.html
@@ -1,4 +1,8 @@
-<div class="bg-white">
+<div *ngIf="(loadingService.loading$ | async)" class="loading-indicator">
+  <app-spinner [loadingIndicator]="!loadingIndicator"></app-spinner>
+</div>
+
+<div *ngIf="!(loadingService.loading$ | async)" class="bg-white">
   <app-sidebar-filter [icon]="iconClose" [isFilterShown]="isFilterShown" [categories]="categories"
     (clicked)="showFilters()" (categoryId)="onReceive($event)">
   </app-sidebar-filter>
