--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,14 +1,16 @@
-<footer class="text-gray-600 body-font">
-  <div class="container px-5 mx-auto">
-  </div>
-  <div class="bg-gray-100">
-    <div class="container px-5 py-6 mx-auto flex items-center sm:flex-row flex-col">
-      <app-brand-logo></app-brand-logo>
-      <p class="text-sm text-gray-500 sm:ml-6 sm:mt-0 mt-4">© 2023 Indobata — All rights reserved
-      </p>
-      <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
-        <app-social-icon></app-social-icon>
-      </span>
+<ng-container *ngIf="!(loadingService.loading$ | async)">
+  <footer class="text-gray-600 body-font">
+    <div class="container px-5 mx-auto">
     </div>
-  </div>
-</footer>
+    <div class="bg-gray-100">
+      <div class="container px-5 py-6 mx-auto flex items-center sm:flex-row flex-col">
+        <app-brand-logo></app-brand-logo>
+        <p class="text-sm text-gray-500 sm:ml-6 sm:mt-0 mt-4">© 2023 Indobata — All rights reserved
+        </p>
+        <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
+          <app-social-icon></app-social-icon>
+        </span>
+      </div>
+    </div>
+  </footer>
+</ng-container>
