--- a/src/app/modules/product/pages/product-detail/product-detail.component.html
+++ b/src/app/modules/product/pages/product-detail/product-detail.component.html
@@ -1,16 +1,13 @@
 <!-- component -->
 <div class="md:flex items-start justify-center py-12 2xl:px-20 md:px-6 px-4">
   <div class="xl:w-2/6 lg:w-2/5 w-80 md:block hidden">
-    <img class="w-full" alt="image of a girl posing" [lazyLoad]="product.images[0]!" />
-    <img class="mt-6 w-full" alt="image of a girl posing" [lazyLoad]="product.images[1]!" />
+    <img class="w-full" alt="Product Images" [lazyLoad]="product.images[0]!" />
+    <img class="mt-6 w-full" alt="Product Images" [lazyLoad]="product.images[1]!" />
   </div>
   <div class="md:hidden">
-    <img class="w-full" alt="image of a girl posing" [lazyLoad]="product!.images[0]" />
+    <img class="w-full" alt="Product Images" [lazyLoad]="product!.images[0]" />
     <div class="flex items-center justify-between mt-3 space-x-4 md:space-x-0">
-      <img alt="image-tag-one" class="md:w-48 md:h-48 w-full" src="https://i.ibb.co/cYDrVGh/Rectangle-245.png" />
-      <img alt="image-tag-one" class="md:w-48 md:h-48 w-full" src="https://i.ibb.co/f17NXrW/Rectangle-244.png" />
-      <img alt="image-tag-one" class="md:w-48 md:h-48 w-full" src="https://i.ibb.co/cYDrVGh/Rectangle-245.png" />
-      <img alt="image-tag-one" class="md:w-48 md:h-48 w-full" src="https://i.ibb.co/f17NXrW/Rectangle-244.png" />
+      <img alt="image-tag-one" class="md:w-48 md:h-48 w-full" [lazyLoad]="product!.images[1]" />
     </div>
   </div>
   <div class="xl:w-2/5 md:w-1/2 lg:ml-8 md:ml-6 md:mt-0 mt-6">
