--- a/src/app/modules/product/pages/product-list/product.component.scss
+++ b/src/app/modules/product/pages/product-list/product.component.scss
@@ -5,9 +5,9 @@
 
 ::ng-deep.ngx-pagination .current {
 	z-index: 10;
-	background-color: #4f46e5 !important;
+	background-color: green !important;
 	color: #fff;
-	outline: 2px solid #4f46e5;
+	outline: 2px solid green;
 	outline-offset: 2px;
 }
 
