--- a/src/app/modules/product/pages/product-detail/product-detail.component.html
+++ b/src/app/modules/product/pages/product-detail/product-detail.component.html
@@ -1,5 +1,8 @@
-<!-- component -->
-<div class="md:flex items-start justify-center py-12 2xl:px-20 md:px-6 px-4">
+<div *ngIf="(loadingService.loading$ | async)" class="loading-indicator">
+  <app-spinner [loadingIndicator]="!loadingIndicator"></app-spinner>
+</div>
+
+<div *ngIf="!(loadingService.loading$ | async)" class="md:flex items-start justify-center py-12 2xl:px-20 md:px-6 px-4">
   <div class="xl:w-2/6 lg:w-2/5 w-80 md:block hidden">
     <img class="w-full" alt="Product Images" [lazyLoad]="product.images[0]!" />
     <img class="mt-6 w-full" alt="Product Images" [lazyLoad]="product.images[1]!" />
