feat: reusable pagination component

--- a/src/app/modules/product/pages/product-list/product.component.html
+++ b/src/app/modules/product/pages/product-list/product.component.html
@@ -41,8 +41,7 @@
               <app-card-product-hover [product]="product"></app-card-product-hover>
             </ng-container>
           </div>
-          <pagination-controls (pageChange)="onPageChanged($event)"></pagination-controls>
-
+          <app-pagination (pageChange)="onPageChanged($event)" [page]="products.length" [totalItems]="totalItems"></app-pagination>
         </div>
       </div>
     </section>
