--- a/src/app/shared/components/card-project/card-project.component.html
+++ b/src/app/shared/components/card-project/card-project.component.html
@@ -1,10 +1,7 @@
 <div class="bg-white rounded-lg shadow-md overflow-hidden">
   <img class="h-48 w-full object-cover" [lazyLoad]="project.images" alt={{project.title}}>
   <div class="p-4">
-    <h3 class="text-lg font-bold text-gray-900">{{ project.title }}</h3>
-    <p class="text-gray-500">{{ project.description }}</p>
-    <div class="mt-4">
-      <a href="#" class="text-gray-800 font-medium">View Details</a>
-    </div>
+    <h3 class="text-lg font-bold text-gray-900">{{ project.title | shortenerText: 20 }}</h3>
+    <p class="text-gray-500">{{ project.description | shortenerText: 70 }}</p>
   </div>
 </div>
