feat: create drodpown profile component

--- a/src/app/modules/home/components/testimonials/testimonials.component.html
+++ b/src/app/modules/home/components/testimonials/testimonials.component.html
@@ -13,7 +13,7 @@
                 {{ i === expandedIndex ? item.comment : (item.comment | slice:0:200) + ' ...' }}</p>
               <a class="inline-flex items-center">
                 <img alt="testimonial" [src]="avatar"
-                  class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center">
+                  class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center" />
                 <span class="flex-grow flex flex-col pl-4">
                   <span class="title-font font-medium text-gray-900">{{item.name}}</span>
                 </span>
