--- a/src/app/shared/components/card-project/card-project.component.html
+++ b/src/app/shared/components/card-project/card-project.component.html
@@ -1,6 +1,6 @@
 <div class="bg-white rounded-lg shadow-md overflow-hidden">
-  <img class="h-48 w-full object-cover" [lazyLoad]="project.images" alt={{project.title}}>
-  <div class="p-4">
+  <img class="h-[10%] w-full object-cover" [lazyLoad]="project.images" alt={{project.title}}>
+  <div class="p-4" [ngClass]="{'hover': true}">
     <h3 class="text-lg font-bold text-gray-900">{{ project.title | shortenerText: 20 }}</h3>
     <p class="text-gray-500">{{ project.description | shortenerText: 70 }}</p>
   </div>
