--- a/src/app/modules/authentication/register/register.component.html
+++ b/src/app/modules/authentication/register/register.component.html
@@ -1,1 +1,34 @@
-<p>register works!</p>
+<section class="bg-gray-200">
+  <div class="flex justify-center min-h-screen">
+    <img class="hidden bg-cover lg:block lg:w-2/3" [lazyLoad]='bgCover' />
+    <div class="flex items-center w-full max-w-3xl p-8 mx-auto lg:px-12 lg:w-2/5">
+      <div class="w-full">
+        <div class="flex justify-center flex-col space-y-2 mb-4">
+          <div class="flex justify-center mb-4">
+            <app-brand-logo [height]="100" [width]="100"></app-brand-logo>
+          </div>
+          <p class="text-[#213a5c] text-base font-semibold text-center">
+            Welcome to Indobata, Please log in to access exclusive features and information.
+          </p>
+        </div>
+
+        <form [formGroup]="form">
+          <app-form-field label="Username" [control]="getFormControl('username')" controlName="username">
+          </app-form-field>
+          <app-form-field label="Email" [control]="getFormControl('email')" controlName="email"></app-form-field>
+          <app-form-field label="Password" [control]="getFormControl('password')" controlName="password">
+          </app-form-field>
+
+          <app-submit-button [isLoading]="isSubmitting" (click)="onRegisterProcess()" [label]="'Register'" [isDisabled]="form.invalid">
+          </app-submit-button>
+        </form>
+        <p class="mt-6 text-sm text-center text-gray-400">
+          If you are new here, please <a routerLink="/login" class="underline text-[#213a5c] font-semibold">
+            create an account
+          </a> to enjoy our services.
+        </p>
+      </div>
+    </div>
+
+  </div>
+</section>
