--- a/src/app/shared/components/dropdown-profile/dropdown-profile.component.html
+++ b/src/app/shared/components/dropdown-profile/dropdown-profile.component.html
@@ -9,7 +9,7 @@
   <!-- Dropdown menu -->
   <div *ngIf="showDropdown" class="dropdown">
     <div class="username">
-      <div>Bonnie Green</div>
+      <span>Bonnie Green</span>
     </div>
     <ul class="py-2 text-sm text-gray-700">
       <li *ngFor="let menu of menuItems">
@@ -19,7 +19,7 @@
       </li>
     </ul>
     <div class="py-2">
-      <button type="button" class="block px-4 py-2 text-sm text-gray-700">Sign out</button>
+      <button type="button" (click)="onLogout()" class="block px-4 py-2 text-sm text-gray-700 hover:font-bold">Sign out</button>
     </div>
   </div>
 </div>
